--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Will Che
 description: Professional Splunker
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://twitter.com/wche/photo
 
 #
 # Flags below are optional
