--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Will Che
 description: Just Will
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://chewil.github.io/images/wche.jpg
 
 #
 # Flags below are optional
