--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Will Che
 description: Just Will
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://chewil.github.io/images/wche.jpg
+avatar: https://chewil.github.io/images/wche.png
 
 #
 # Flags below are optional
